@@ -4,8 +4,9 @@ import serial
 from django.conf import settings
 from django.utils import timezone
 
-from dsmr_datalogger.models.reading import DsmrReading
+from dsmr_datalogger.models.reading import DsmrReading, MeterStatistics
 from dsmr_datalogger.models.settings import DataloggerSettings
+from dsmr_datalogger.dsmr import DSMR_MAPPING
 
 
 def read_telegram():
@@ -55,7 +56,19 @@ def telegram_to_reading(data):
     """
     Converts a P1 telegram to a DSMR reading, which will be stored in database.
     """
-    reading_kwargs = {}
+
+    def _get_reading_fields():
+        reading_fields = DsmrReading._meta.get_all_field_names()
+        reading_fields.remove('id')
+        reading_fields.remove('processed')
+        return reading_fields
+
+    def _get_statistics_fields():
+        reading_fields = MeterStatistics._meta.get_all_field_names()
+        reading_fields.remove('id')
+        return reading_fields
+
+    parsed_reading = {}
     field_splitter = re.compile(r'([^(]+)\((.+)\)')
 
     for current_line in data.split("\n"):
@@ -67,27 +80,37 @@ def telegram_to_reading(data):
         code = result.group(1)
 
         try:
-            field = DsmrReading.DSMR_MAPPING[code]
+            field = DSMR_MAPPING[code]
         except KeyError:
             continue
 
         value = result.group(2)
 
-        # Drop units.
+        # Drop units, as the database does not care for them.
         value = value.replace('*kWh', '').replace('*kW', '').replace('*m3', '')
 
         # Ugly workaround for combined values.
         if code == "0-1:24.2.1":
             timestamp_value, gas_usage = value.split(")(")
-            reading_kwargs[field[0]] = reading_timestamp_to_datetime(string=timestamp_value)
-            reading_kwargs[field[1]] = gas_usage
+            parsed_reading[field[0]] = reading_timestamp_to_datetime(string=timestamp_value)
+            parsed_reading[field[1]] = gas_usage
         else:
             if field == "timestamp":
                 value = reading_timestamp_to_datetime(string=value)
 
-            reading_kwargs[field] = value
+            parsed_reading[field] = value
 
-    return DsmrReading.objects.create(**reading_kwargs)
+    # Now we need to split reading & statistics. So we split the dict here.
+    reading_kwargs = {k: parsed_reading[k] for k in _get_reading_fields()}
+    new_reading = DsmrReading.objects.create(**reading_kwargs)
+
+    # Optional feature.
+    if DataloggerSettings.get_solo().track_meter_statistics:
+        statistics_kwargs = {k: parsed_reading[k] for k in _get_statistics_fields()}
+        # There should already be one in database, created when migrating.
+        MeterStatistics.objects.all().update(**statistics_kwargs)
+
+    return new_reading
 
 
 def reading_timestamp_to_datetime(string):
